CRUD Operations for both entities in the front office and in the back office

--- a/templates/data/index.html.twig
+++ b/templates/data/index.html.twig
@@ -3,6 +3,12 @@
 {% block title %}Performance Data{% endblock %}
 
 {% block main %}
+    <div class="page-title text-center py-5">
+      <div class="container">
+        <h1 class="display-4">Performance data</h1>
+        <p class="lead">Track Performances of Athletes</p>
+      </div>
+    </div>
     <nav aria-label="breadcrumb" class="container py-3">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Insights</a></li>
