--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -99,7 +99,7 @@
   {% endblock %}
   </main>
 
-  <footer id="footer" class="footer fixed-bottom light-background">
+  <footer id="footer" class="footer position-relative light-background">
     {% block footer %}
     <div class="container footer-top">
       <div class="row gy-4">
