CRUD Operations for both entities in the front office and in the back office

--- a/templates/data/index.html.twig
+++ b/templates/data/index.html.twig
@@ -6,7 +6,7 @@
     <div class="page-title text-center py-5">
       <div class="container">
         <h1 class="display-4">Performance data</h1>
-        <p class="lead">Track Performances of Athletes</p>
+        <p class="lead">📈 See beyond the effort — monitor athlete performance and guide improvement with real-time data</p>
       </div>
     </div>
     <nav aria-label="breadcrumb" class="container py-3">
