updated team and tournament + working symfony.lock

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -100,7 +100,7 @@
         {% endif %}
 
         {# MEDICAL TEAM LINKS #}
-        {% if is_granted('ROLE_MEDICAL') %}
+        {% if is_granted('ROLE_MED_STAFF') %}
         <li><a href="{{ path('app_claim_new') }}">Claims<br></a></li>
 
         <li class="dropdown"><a href="#"><span>Health</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
