--- a/templates/results/edit.html.twig
+++ b/templates/results/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Results{% endblock %}
 
-{% block body %}
+{% block main %}
     <h1>Edit Results</h1>
 
     {{ include('results/_form.html.twig', {'button_label': 'Update'}) }}
