--- a/templates/results/new.html.twig
+++ b/templates/results/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Results{% endblock %}
 
-{% block body %}
+{% block main %}
     <h1>Create new Results</h1>
 
     {{ include('results/_form.html.twig') }}
