--- a/templates/team/edit.html.twig
+++ b/templates/team/edit.html.twig
@@ -6,7 +6,7 @@
 
 {% block body_class %}team-edit-page{% endblock %}
 
-{% block content %}
+{% block main %}
   <div class="page-title" data-aos="fade">
     <div class="heading">
       <div class="container">
