--- a/templates/tournament/index.html.twig
+++ b/templates/tournament/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Tournament Index{% endblock %}
 
-{% block content %}
+{% block main %}
   <style>
     .tournament-page {
       background: linear-gradient(180deg, #f8f9fa 0%, #e9ecef 100%);
