--- a/templates/tournament/new.html.twig
+++ b/templates/tournament/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Tournament{% endblock %}
 
-{% block content %}
+{% block main %}
   <div class="page-title text-center py-5">
     <div class="container">
       <h1 class="display-4 fw-bold">Create New Tournament</h1>
