--- a/templates/tournament/show.html.twig
+++ b/templates/tournament/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Tournament Details{% endblock %}
 
-{% block content %}
+{% block main %}
   <div class="page-title text-center py-5">
     <div class="container">
       <h1 class="display-4 fw-bold">Tournament Details</h1>
