--- a/templates/results/index.html.twig
+++ b/templates/results/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Results index{% endblock %}
 
-{% block body %}
+{% block main %}
     <h1>Results index</h1>
 
     <table class="table">
