--- a/templates/team/show.html.twig
+++ b/templates/team/show.html.twig
@@ -6,7 +6,7 @@
 
 {% block body_class %}team-show-page{% endblock %}
 
-{% block content %}
+{% block main %}
   <div class="container py-5">
     <h1 class="mb-4">Team: {{ team.teamName }}</h1>
     <p><strong>Sport:</strong> {{ team.teamTypeOfSport }}</p>
