--- a/templates/tournament/manage.html.twig
+++ b/templates/tournament/manage.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Manage Tournament{% endblock %}
 
-{% block content %}
+{% block main %}
   <div class="container py-5">
     <h1 class="mb-4">Manage Tournament: {{ tournament.tournamentName }}</h1>
     <p><strong>Number of Teams:</strong> {{ tournament.tournamentNbteams }}</p>
