--- a/templates/claim/show.html.twig
+++ b/templates/claim/show.html.twig
@@ -30,11 +30,11 @@
                 </tr>
                 <tr>
                     <th>Submitter</th>
-                    <td>{{ claim.idUser ? claim.idUser.user_fname ~ ' ' ~ claim.idUser.user_lname : '' }}</td>
+                    <td>{{ claim.idUser ? claim.idUser.userFname ~ ' ' ~ claim.idUser.userLname : '' }}</td>
                 </tr>
                 <tr>
                     <th>Target</th>
-                    <td>{{ claim.idUserToClaim ? claim.idUserToClaim.user_fname ~ ' ' ~ claim.idUserToClaim.user_lname : '' }}</td>
+                    <td>{{ claim.idUserToClaim ? claim.idUserToClaim.userFname ~ ' ' ~ claim.idUserToClaim.userLname : '' }}</td>
                 </tr>
             </tbody>
         </table>
