--- a/templates/claim/new.html.twig
+++ b/templates/claim/new.html.twig
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="d-flex justify-content-between mt-3">
-                    <a href="{{ path('app_claim_index') }}" class="btn btn-outline-secondary">
+                    <a href="{{ path('app_user_index') }}" class="btn btn-outline-secondary">
                         <i class="bi bi-arrow-left me-1"></i>Back
                     </a>
                     <button class="btn btn-primary" type="submit">
