--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-  New {% if role == 'coach' %}Coach{% elseif role == 'med_staff' %}Medical Staff{% else %}Athlete{% endif %} | SPIIN Sports
+  New {% if role|lower == 'coach' %}Coach{% elseif role|lower == 'med_staff' %}Medical Staff{% else %}Athlete{% endif %} | SPIIN Sports
 {% endblock %}
 {% block description %}
-  Create a new {% if role == 'coach' %}coach{% elseif role == 'med_staff' %}medical staff{% else %}athlete{% endif %} in the SPIIN Sports system
+  Create a new {% if role|lower == 'coach' %}coach{% elseif role|lower == 'med_staff' %}medical staff{% else %}athlete{% endif %} in the SPIIN Sports system
 {% endblock %}
 {% block keywords %}
-  new {% if role == 'coach' %}coach{% elseif role == 'med_staff' %}medical staff{% else %}athlete{% endif %}, sports, management, SPIIN
+  new {% if role|lower == 'coach' %}coach{% elseif role|lower == 'med_staff' %}medical staff{% else %}athlete{% endif %}, sports, management, SPIIN
 {% endblock %}
 
 {% block body_class %}
-  {% if role == 'coach' %}coach-new-page{% elseif role == 'med_staff' %}med-staff-new-page{% else %}athlete-new-page{% endif %}
+  {% if role|lower == 'coach' %}coach-new-page{% elseif role|lower == 'med_staff' %}med-staff-new-page{% else %}athlete-new-page{% endif %}
 {% endblock %}
 
 {% block main %}
@@ -20,8 +20,8 @@
       <div class="container">
         <div class="row d-flex justify-content-center text-center">
           <div class="col-lg-8">
-            <h1>Create New {% if role == 'coach' %}Coach{% elseif role == 'med_staff' %}Medical Staff{% else %}Athlete{% endif %}</h1>
-            <p class="mb-0">Add a new {% if role == 'coach' %}coach{% elseif role == 'med_staff' %}medical staff{% else %}athlete{% endif %} to the system</p>
+            <h1>Create New {% if role|lower == 'coach' %}Coach{% elseif role|lower == 'med_staff' %}Medical Staff{% else %}Athlete{% endif %}</h1>
+            <p class="mb-0">Add a new {% if role|lower == 'coach' %}coach{% elseif role|lower == 'med_staff' %}medical staff{% else %}athlete{% endif %} to the system</p>
           </div>
         </div>
       </div>
@@ -30,8 +30,8 @@
 
   <section class="section">
     <div class="container" data-aos="fade-up">
-      {{ include('user/_form.html.twig', {'button_label': 'Save', 'role': role, 'context': context}) }}
-      <a href="{{ path('app_user_index', {'context': context, 'role': role}) }}" class="btn btn-outline-secondary mt-3">
+      {{ include('user/_form.html.twig', {'button_label': 'Save', 'role': role|lower, 'context': context|default('front'), 'is_new': true}) }}
+      <a href="{{ path('app_user_index', {'context': context|default('front'), 'role': role|lower}) }}" class="btn btn-outline-secondary mt-3">
         <i class="bi bi-arrow-left"></i> Back to List
       </a>
     </div>
