--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -42,13 +42,13 @@
     </div>
 
     <div class="d-flex gap-2 mt-4">
-      <a href="{{ path('app_user_index', {'context': context, 'role': role}) }}" class="btn btn-outline-secondary">
+      <a href="{{ path('app_user_index', {'context': context|default('front'), 'role': user.userRole|lower}) }}" class="btn btn-outline-secondary">
         <i class="bi bi-arrow-left"></i> Back to List
       </a>
-      <a href="{{ path('app_user_edit', {'context': context, 'id': user.id, 'role': role}) }}" class="btn btn-outline-secondary">
+      <a href="{{ path('app_user_edit', {'context': context|default('front'), 'id': user.id}) }}" class="btn btn-outline-secondary">
         <i class="bi bi-pencil"></i> Edit
       </a>
-      {{ include('user/_delete_form.html.twig', {'context': context, 'role': role}) }}
+      {{ include('user/_delete_form.html.twig', {'context': context|default('front'), 'role': user.userRole|lower}) }}
     </div>
   </div>
 {% endblock %}
