--- a/templates/training_session/_form.html.twig
+++ b/templates/training_session/_form.html.twig
@@ -77,8 +77,8 @@
 
 {# Team ID #}
 <div class="mb-3">
-    {{ form_label(form.teamId, 'Team ID') }}
-    {{ form_widget(form.teamId) }}
+    {{ form_label(form.team, 'Team ID') }}
+    {{ form_widget(form.team) }}
     
 </div>
 
