--- a/templates/data/show.html.twig
+++ b/templates/data/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ data.userId }}'s Performance - {{ data.performanceDateRecorded|date('M d, Y') }}{% endblock %}
+{% block title %}{{ data.user ? data.user.fullName : 'N/A' }}'s Performance - {{ data.performanceDateRecorded|date('M d, Y') }}{% endblock %}
 
 {% block main %}
     <div class="container performance-detail">
@@ -19,7 +19,7 @@
         <div class="card shadow-sm mb-4">
             <div class="card-header bg-primary text-white">
                 <h2 class="h5 mb-0">
-                    <i class="bi bi-person"></i> User #{{ data.userId }}
+                    <i class="bi bi-person"></i> User: {{ data.user ? data.user.fullName : 'N/A' }}
                     <span class="float-end">{{ data.performanceDateRecorded|date('F j, Y') }}</span>
                 </h2>
             </div>
