--- a/templates/training_session/show.html.twig
+++ b/templates/training_session/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ training_session.teamId }}'s Training Session - {{ training_session.sessionStartTime|date('M d, Y') }}{% endblock %}
+{% block title %}{{ training_session.team ? training_session.team.teamName : 'N/A' }}'s Training Session - {{ training_session.sessionStartTime|date('M d, Y') }}{% endblock %}
 
 {% block main %}
     <div class="container training-session-detail">
@@ -19,7 +19,7 @@
         <div class="card shadow-sm mb-4">
             <div class="card-header bg-primary text-white">
                 <h2 class="h5 mb-0">
-                    <i class="bi bi-people-fill"></i> Team #{{ training_session.teamId }}
+                    <i class="bi bi-people-fill"></i> Team: {{ training_session.team ? training_session.team.teamName : 'N/A' }}
                     <span class="float-end">{{ training_session.sessionStartTime|date('F j, Y') }}</span>
                 </h2>
             </div>
@@ -94,6 +94,4 @@
             }) }}
         </div>
     </div>
-
-  
 {% endblock %}
