post validation push

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -129,7 +129,6 @@
 
     </ul>
 </li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -153,8 +152,8 @@
       <img src="{{ asset('frontOffice/img/hero-bg.jpg') }}" alt="" data-aos="fade-in">
 
       <div class="container">
-        <h2 data-aos="fade-up" data-aos-delay="100">Learning Today,<br>Leading Tomorrow</h2>
-        <p data-aos="fade-up" data-aos-delay="200">We are team of talented designers making websites with Bootstrap</p>
+        <h2 data-aos="fade-up" data-aos-delay="100"> Welcome to SPIN <br> The most innovating Manager for Sports Clubs </h2>
+        <p data-aos="fade-up" data-aos-delay="200">We are team of talented engineers dedicated to bringing Tech to sports </p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
         {% if app.user %}
             <a class="btn-getstarted" href="{{ path('app_logout') }}">Logout</a>
