--- a/templates/team/_form.html.twig
+++ b/templates/team/_form.html.twig
@@ -1,6 +1,6 @@
 <div class="card shadow-sm">
   <div class="card-body">
-    {{ form_start(form) }}
+  {{ form_start(form,{'attr':{'novalidate' : 'novalidate'} } )  }}
       <div class="row g-3">
         <div class="col-md-6">
           {{ form_label(form.teamName, null, {'label_attr': {'class': 'form-label'}}) }}
