--- a/templates/training_session/index.html.twig
+++ b/templates/training_session/index.html.twig
@@ -50,7 +50,7 @@
                 {% for session in training_sessions %}
                     <tr>
                         <td>{{ session.sessionFocus }}</td>
-                        <td>{{ session.sessionStartTime|date('H:i') }}</td>
+                        <td>{{ session.sessionStartTime|date('Y-m-d H:i') }}</td>
                         <td>{{ session.sessionDuration }} <small>mins</small></td>
                         <td>{{ session.Location.locationName }}</td>
                         <td>{{ session.team ? session.team.teamName : 'N/A' }}</td>
