health advanced features and everything

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -102,7 +102,10 @@
     <ul>
         <li><a href="{{ path('app_injury_Myhealth') }}"><span>Status</span></a></li>
         <li><a href="{{ path('calendar_show') }}"><span>Calendar</span></a></li>
-         <li><a href="{{ path('chatbot_show') }}"><span>ChatBot</span></a></li>
+        <li><a href="{{ path('chatbot_show') }}"><span>ChatBot</span></a></li>
+        <li><a href="{{ path('youtube_search') }}"><span>YouTube</span></a></li>
+        <li><a href="{{ path('app_game') }}"><span>Let's play</span></a></li>
+
     </ul>
 </li>
         {% endif %}
