--- a/templates/recoveryplan/index.html.twig
+++ b/templates/recoveryplan/index.html.twig
@@ -91,4 +91,15 @@
   </div>
 </section>
 {% endblock %}
+
+{% block javascripts %}
+<script>
+  const searchInput = document.getElementById('searchInput');
+  const searchForm = document.getElementById('searchForm');
+
+  searchInput.addEventListener('input', function() {
+    searchForm.submit();
+  });
+</script>
+{% endblock %}
 {% endblock %}
