--- a/templates/injury/show.html.twig
+++ b/templates/injury/show.html.twig
@@ -19,7 +19,12 @@
           </tr>
           <tr>
             <th>Date</th>
-            <td>{{ injury.injuryDate ? injury.injuryDate|date('Y-m-d') : '' }}</td>
+            <td>
+              {{ injury.injuryDate ? injury.injuryDate|date('Y-m-d') : '' }}
+              {% if injury.injuryDate %}
+                <br><small class="text-muted">({{ injury.injuryDate|time_diff }})</small>
+              {% endif %}
+            </td>
           </tr>
           <tr>
             <th>Severity</th>
